<resources>
    <string name="app_name">BilibiliLiveTV</string>
    <string name="host_name">bilibilitv.muedsa.com</string>
    <string name="latest_version_download_url">https://github.com/MUedsa/BilibiliLiveTV/releases</string>
    <string name="browse_title">Bilibili Live</string>
    <string name="danmaku_test">弹幕测试</string>
    <string name="video_test">视频测试</string>
    <string name="clear_history">清除直播历史记录</string>
    <string name="clear_history_alert">确定清除历史记录?</string>
    <string name="alert_yes">确定</string>
    <string name="alert_no">取消</string>
    <string name="remove_history_alert">确定删除?</string>
    <string name="clear_channel">清除首屏节目</string>
    <string name="clear_channel_alert">确定清除首屏节目?</string>
    <string name="watch_trailer_title">播放</string>
    <string name="watch_trailer_play">PLAY</string>
    <string name="watch_trailer_loading">LOADING</string>
    <string name="room_live_status">直播状态</string>
    <string name="room_living">直播中</string>
    <string name="room_no_live">未开播</string>
    <string name="room_online_num">热度</string>
    <string name="liveRoom">liveRoom</string>
    <string name="live_play_failure">主播未开播或获取直播地址失败:%s</string>
    <string name="live_room_info_failure">获取直播间信息失败:%s</string>
    <string name="live_danmu_ws_token_failure">获取弹幕Token失败:%s</string>
    <string name="action_up_last_videos">近期投稿</string>
    <string name="playback_controls_danmu_play">弹幕开</string>
    <string name="playback_controls_danmu_stop">弹幕关</string>
    <string name="playback_controls_sc_play">SuperChat开</string>
    <string name="playback_controls_sc_stop">SuperChat关</string>
    <string name="playback_controls_gift_play">礼物弹幕开</string>
    <string name="playback_controls_gift_stop">礼物弹幕关</string>
    <string name="playback_controls_change_play_url">切换线路</string>
    <string name="playback_controls_subtitle_toggle">字幕</string>
    <string name="error_fragment_message">An error occurred</string>
    <string name="dismiss_error">Dismiss</string>
    <!-- channel -->
    <string name="tv_channel_name">BilibiliLive</string>
    <string name="tv_uir_path_program">BilibiliLive</string>
    <string name="head_title_popular">推荐视频</string>
    <string name="head_title_followed_living_rooms">正在直播</string>
    <string name="head_title_history">直播历史记录</string>
    <string name="head_title_video_dynamic">视频动态</string>
    <string name="head_title_video_history">视频历史记录</string>
    <string name="head_title_other">其他</string>
    <string name="head_title_latest_version">最新版本</string>
    <string name="head_title_search_result_live_user">主播</string>
    <string name="head_title_search_result_live_room">直播间</string>
    <string name="head_title_search_result_video">视频</string>
    <string name="total_msg_change_play_url">切换到线路%d</string>
    <string name="toast_msg_danmu_connect_success">连接到弹幕服务器</string>
    <string name="toast_msg_danmu_connect_error">弹幕服务器连接关闭: %s</string>
    <string name="toast_msg_danmu_on">弹幕开启</string>
    <string name="toast_msg_danmu_off">弹幕关闭</string>
    <string name="toast_msg_sc_on">SuperChat开启</string>
    <string name="toast_msg_sc_off">SuperChat关闭</string>
    <string name="toast_msg_gift_on">礼物弹幕开启</string>
    <string name="toast_msg_gift_off">礼物弹幕关闭</string>
    <string name="toast_msg_jump_url_error">无法打开浏览器, %s</string>
    <string name="toast_msg_jump_video_detail_error">获取播放信息失败,可能视频不存在</string>
    <string name="toast_msg_video_play_failure">视频地址获取失败,可能视频不存在</string>
    <string name="toast_msg_up_last_videos_failure">获取Up最近投稿视频失败</string>
    <string name="bilibili_scan_qr_code_login">BiliBili扫码登录</string>
    <string name="loading">加载中…</string>
    <string name="bilibili_refresh">刷新</string>
    <string name="logout">注销</string>
    <string name="login_timeout">登录超时，请重新扫码</string>
    <string name="setting">设置</string>
    <string name="perf_title_danmaku_scale_text_size">弹幕缩放比例(%)</string>
    <string name="perf_title_danmaku_transparency">弹幕透明度(%)</string>
    <string name="perf_title_danmaku_margin">弹幕边距</string>
    <string name="perf_title_danmaku_max_lines_scroll">滚动弹幕最大行数</string>
    <string name="perf_title_danmaku_max_lines_fix_top">顶部弹幕最大行数</string>
    <string name="perf_title_danmaku_max_lines_fix_bottom">底部弹幕最大行数</string>
    <string name="perf_title_danmaku_overlapping_enable_scroll">滚动弹幕禁止重叠</string>
    <string name="perf_title_danmaku_overlapping_enable_fix_top">顶部弹幕禁止重叠</string>
    <string name="perf_title_danmaku_overlapping_enable_fix_bottom">底部弹幕禁止重叠</string>
    <string name="perf_key_danmaku_scale_text_size">SCALE_TEXT_SIZE</string>
    <string name="perf_key_danmaku_transparency">DANMAKU_TRANSPARENCY</string>
    <string name="perf_key_danmaku_margin">DANMAKU_MARGIN</string>
    <string name="perf_key_danmaku_max_lines_scroll">DANMAKU_MAX_LINES_SCROLL</string>
    <string name="perf_key_danmaku_max_lines_fix_top">DANMAKU_MAX_LINES_FIX_TOP</string>
    <string name="perf_key_danmaku_max_lines_fix_bottom">DANMAKU_MAX_LINES_FIX_BOTTOM</string>
    <string name="perf_key_danmaku_overlapping_enable_scroll">DANMAKU_OVERLAPPING_ENABLE_SCROLL</string>
    <string name="perf_key_danmaku_overlapping_enable_fix_top">DANMAKU_OVERLAPPING_ENABLE_FIX_TOP</string>
    <string name="perf_key_danmaku_overlapping_enable_fix_bottom">DANMAKU_OVERLAPPING_ENABLE_FIX_BOTTOM</string>
    <string name="avatar">Avatar</string>
</resources>